fixed bootstrap grid problem by fixing height of each ng-repeated eleent.  credit to miles for figuring out.  problem was that elements with wrapped text pushed height down, and float would get "stuck" on that element hanging down.. took way too long to figure this out

--- a/css/_home.scss
+++ b/css/_home.scss
@@ -100,6 +100,10 @@ div.instructions{
 	p{
 		text-align: left;
 	}
+	.fa{
+		font-size: 60px;
+		color: $instaBlue;
+	}
 
 
 
