--- a/css/_results.relationships.scss
+++ b/css/_results.relationships.scss
@@ -24,7 +24,16 @@ div.relationships{
 	.warning{
 		color: #D91E18;
 	}
+
+	// *{
+	// 	outline: 1px solid red;
+	// }
 	
+
+	// fixed height, so float doesn't break
+	div.uniqueFollow, div.liker{
+		height: 170px;
+	}
 
 
 
@@ -42,3 +51,4 @@ div.likers-container{
 		border-radius: 5px;
 	}
 }
+
