--- a/css/_results.scss
+++ b/css/_results.scss
@@ -80,10 +80,3 @@ div.results-content{
 
 
 
-
-.fa{
-	font-size: 60px;
-	color: $instaBlue;
-}
-
-
